--- a/www/index.html
+++ b/www/index.html
@@ -3,33 +3,78 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wasm Imgur brute</title>
+  <title>Wasm Imgur bruteforce</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
   <style>
-    img {
+    body {
+      background-color: rgb(246, 248, 250);
+      font-family: 'Lato', sans-serif;
+      user-select: none;
+    }
+
+    i {
+      font-family: 'FontAwesome';
+      font-style: normal;
+    }
+
+    .generated_image {
       max-height: 100%;
       max-width: 100%;
+      border: 1px black solid;
     }
 
     .container {
       margin-top: 20px;
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+
+    button {
+      border: 1px solid rgba(27, 31, 36, 0.212);
+      box-shadow: rgba(27, 31, 36, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.2) 0px 1px 0px 0px;
+      background-color: rgb(246, 248, 250);
+      border-radius: 6px;
+      padding: 4px;
+    }
+
+    button:hover {
+      cursor: pointer;
+      background-color: rgb(237, 239, 241);
+    }
+
+    button:disabled {
+      cursor: not-allowed;
+    }
+
+    button:active {
+      background-color: rgb(227, 229, 231);
     }
   </style>
   <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
 </head>
 
 <body>
-  <button id="clear-all">clear all</button>
-  <button id="button">generate</button>
-  <button id="auto">gen 10</button>
-  <input type="number" id="link-length" value=5>
-  <label for="link-length">length to brute</label>
+  <button id="clear_all">
+    <i class="fa-solid fa-trash"></i>
+    Clear
+  </button>
 
+  <button id="generate">
+    <i class="fa-solid fa-plus"></i>
+    Generate
+  </button>
+
+  <button id="generate_ten">Gen 10</button>
+
+  <input type="number" id="link_length" value=5 min="5">
+  <label for="link_length">Length to bruteforce</label>
 
   <div class="container">
-    <img id="loading" src="https://web.archive.org/web/20091026235011/http://www.geocities.com/croemmayaguez/loadingv.gif" hidden>
+    <img id="loading"
+      src="https://web.archive.org/web/20091026235011/http://www.geocities.com/croemmayaguez/loadingv.gif" hidden>
 
     <div id="images">
-    </div>  
+    </div>
   </div>
 
   <footer>
