--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,13 @@
       browser.</p>
   </noscript>
 
-  <h1 class="text-center">WASM bruteforce thingymajig</h1>
-
-
   <div class="container">
+    <div id="repo-link">
+      <a href="https://github.com/ayes-web/wasm-imgur-brute">Source</a>
+    </div>
+
+    <h1 class="text-center">WASM bruteforce thingymajig</h1>
+
     <div id="menu">
       <button id="clear-all">
         <svg class="icon">
