--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <title>WASM bruteforce thingymajig</title>
 
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./public/assets/favicon-16x16.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="./public/assets/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="apple-touch-icon" href="./public/assets/apple-touch-icon.png" sizes="180x180">
+
   <link rel="stylesheet" href="./style.scss">
   <meta content="width=device-width, height=device-height, initial-scale=1" name="viewport">
   <meta name="description" content="Bruteforce images from image hosting websites">
