--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,9 @@
       </select>
 
       <div>Length to bruteforce</div>
-      <input type="number" id="link-length" value=5 min=5 required>
+      <label>
+        <input type="number" id="link-length" value=5 min=5 autocomplete="off" required>
+      </label>
     </div>
 
     <div id="spinner-wrapper">
