Fixed blobs working on chrome, Added stop button, Added should_stop_now, updated dependencies, bumped version

--- a/www/index.html
+++ b/www/index.html
@@ -47,11 +47,11 @@
       </button>
 
       <button id="generate-ten">Gen 10</button>
-
       <select id="site-selection" class="margin-bottom">
         <option value="imgur">Imgur</option>
         <option value="lightshot">Lightshot</option>
       </select>
+      <button id="stop" disabled>Stop</button>
 
       <div>Length to bruteforce</div>
       <label>
