--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" href="./public/assets/favicon-32x32.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="./public/assets/apple-touch-icon.png" sizes="180x180">
 
-  <link rel="stylesheet" href="./style.scss">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./node_modules/common-web-styles/common.css">
   <meta content="width=device-width, height=device-height, initial-scale=1" name="viewport">
   <meta name="description" content="Bruteforce images from image hosting websites">
   <meta name="theme-color" content="#1f1f1f">
